--- a/calendar.html
+++ b/calendar.html
@@ -4,192 +4,306 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Workout Calendar</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
     body {
-      margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: #f2f2f2;
+      margin: 0;
+      padding: 1rem;
+      background: #f4f9fd;
+      color: #333;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 1rem;
     }
+
     h1 {
+      font-size: 1.5rem;
       margin-bottom: 0.5rem;
     }
-    .calendar-header {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
-      max-width: 400px;
-      align-items: center;
+
+    .month-header {
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
     }
+
     .calendar {
       display: grid;
       grid-template-columns: repeat(7, 1fr);
       gap: 0.5rem;
       width: 100%;
       max-width: 400px;
-      margin-top: 1rem;
+      margin-top: 0.5rem;
     }
+
+    .day-name {
+      font-weight: bold;
+      text-align: center;
+    }
+
     .day {
+      height: 50px;
       background: white;
       border-radius: 8px;
-      padding: 1rem;
-      text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
       cursor: pointer;
+      position: relative;
     }
+
     .today {
-      font-weight: bold;
-      border: 2px solid #0077b6;
+      border: 2px solid #007aff;
     }
-    .modal {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+
+    .emoji {
+      position: absolute;
+      bottom: 2px;
+      font-size: 0.8rem;
+    }
+
+    .controls {
+      margin-top: 1rem;
+      display: flex;
+      gap: 1rem;
+    }
+
+    .summary {
+      margin-top: 1rem;
+      width: 100%;
+      max-width: 400px;
       background: white;
       padding: 1rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    .summary h3 {
+      margin-top: 0;
+    }
+
+    .workout-entry {
+      margin-top: 1rem;
+      padding: 1rem;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    .modal {
       display: none;
-      flex-direction: column;
-      gap: 0.5rem;
-      z-index: 10;
-      width: 90%;
-      max-width: 300px;
-    }
-    .modal.show {
-      display: flex;
-    }
-    .overlay {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: rgba(0,0,0,0.3);
-      z-index: 5;
-      display: none;
+      right: 0;
+      bottom: 0;
+      background: rgba(0,0,0,0.5);
+      justify-content: center;
+      align-items: center;
     }
-    .overlay.show {
+
+    .modal-content {
+      background: white;
+      padding: 1rem;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 300px;
+    }
+
+    .modal-content label, .modal-content select, .modal-content input {
       display: block;
-    }
-    button {
-      padding: 0.5rem;
-      border: none;
-      border-radius: 8px;
-      background: #0077b6;
-      color: white;
-      font-size: 1rem;
-      cursor: pointer;
+      width: 100%;
+      margin-bottom: 0.5rem;
     }
   </style>
 </head>
 <body>
   <h1>Workout Calendar</h1>
-  <div class="calendar-header">
-    <button onclick="prevMonth()">Last Month</button>
-    <h2 id="monthYear"></h2>
-    <button onclick="nextMonth()">Next Month</button>
-  </div>
+  <div class="month-header" id="monthHeader"></div>
   <div class="calendar" id="calendar"></div>
-  <div class="overlay" id="overlay" onclick="closeModal()"></div>
+  <div class="controls">
+    <button onclick="changeMonth(-1)">Last Month</button>
+    <button onclick="changeMonth(1)">Next Month</button>
+  </div>
+
+  <div class="summary" id="summary"></div>
+
   <div class="modal" id="workoutModal">
-    <label for="type">Workout Type</label>
-    <select id="type">
-      <option value="run">🏃‍♂️ Run</option>
-      <option value="bike">🚴‍♂️ Bike</option>
-      <option value="swim">🏊‍♂️ Swim</option>
-      <option value="weights">🏋️ Weights</option>
-      <option value="hockey">🏑 Hockey</option>
-    </select>
-    <input type="number" id="distance" placeholder="Distance (km)" />
-    <input type="number" id="duration" placeholder="Duration (min)" />
-    <button onclick="saveWorkout()">Save</button>
-    <button onclick="closeModal()">Back</button>
+    <div class="modal-content">
+      <h3 id="selectedDateDisplay"></h3>
+      <label for="workoutType">Workout Type</label>
+      <select id="workoutType">
+        <option value="run">🏃‍♂️ Run</option>
+        <option value="bike">🚴‍♂️ Bike</option>
+        <option value="swim">🏊‍♂️ Swim</option>
+        <option value="weights">🏋️‍♂️ Weights</option>
+        <option value="hockey">🏑 Hockey</option>
+      </select>
+
+      <div id="distanceTimeFields">
+        <label for="distance">Distance (km)</label>
+        <input type="number" id="distance" />
+        <label for="duration">Duration (min)</label>
+        <input type="number" id="duration" />
+      </div>
+
+      <div id="weightsFields" style="display:none;">
+        <label for="weightsType">Weights Type</label>
+        <select id="weightsType">
+          <option value="push">Push</option>
+          <option value="pull">Pull</option>
+          <option value="legs">Legs</option>
+        </select>
+      </div>
+
+      <button onclick="saveWorkout()">Save</button>
+      <button onclick="closeModal()">Back</button>
+    </div>
   </div>
 
   <script>
     let currentDate = new Date();
-    let selectedDate;
 
-    function renderCalendar() {
-      const calendar = document.getElementById("calendar");
-      calendar.innerHTML = "";
+    function getStoredWorkouts() {
+      return JSON.parse(localStorage.getItem('calendarWorkouts') || '{}');
+    }
 
-      const monthYear = document.getElementById("monthYear");
+    function saveStoredWorkouts(data) {
+      localStorage.setItem('calendarWorkouts', JSON.stringify(data));
+    }
+
+    function updateCalendar() {
+      const calendar = document.getElementById('calendar');
+      const monthHeader = document.getElementById('monthHeader');
+      calendar.innerHTML = '';
+
       const year = currentDate.getFullYear();
       const month = currentDate.getMonth();
+      const firstDay = new Date(year, month, 1);
+      const lastDay = new Date(year, month + 1, 0);
+      const startDay = firstDay.getDay();
 
-      monthYear.textContent = `${currentDate.toLocaleString("default", { month: "long" })} ${year}`;
+      const weekdays = ['S','M','T','W','T','F','S'];
+      weekdays.forEach(day => {
+        const div = document.createElement('div');
+        div.className = 'day-name';
+        div.textContent = day;
+        calendar.appendChild(div);
+      });
 
-      const firstDay = new Date(year, month, 1).getDay();
-      const daysInMonth = new Date(year, month + 1, 0).getDate();
+      monthHeader.textContent = `${firstDay.toLocaleString('default', { month: 'long' })} ${year}`;
 
-      const startDay = firstDay === 0 ? 6 : firstDay - 1;
       for (let i = 0; i < startDay; i++) {
-        const empty = document.createElement("div");
-        calendar.appendChild(empty);
+        calendar.appendChild(document.createElement('div'));
       }
 
-      const workouts = JSON.parse(localStorage.getItem("calendarWorkouts") || "{}");
-      for (let day = 1; day <= daysInMonth; day++) {
-        const dateStr = `${year}-${String(month + 1).padStart(2, "0")}-${String(day).padStart(2, "0")}`;
-        const div = document.createElement("div");
-        div.className = "day";
-        div.textContent = day;
-        if (dateStr === new Date().toISOString().split("T")[0]) div.classList.add("today");
+      const workouts = getStoredWorkouts();
+
+      for (let i = 1; i <= lastDay.getDate(); i++) {
+        const date = new Date(year, month, i);
+        const dateStr = date.toISOString().split('T')[0];
+        const div = document.createElement('div');
+        div.className = 'day';
+        if (date.toDateString() === new Date().toDateString()) div.classList.add('today');
+        div.textContent = i;
+
         if (workouts[dateStr]) {
-          const emoji = workouts[dateStr][0].type === "run" ? "🏃‍♂️" :
-                        workouts[dateStr][0].type === "bike" ? "🚴‍♂️" :
-                        workouts[dateStr][0].type === "swim" ? "🏊‍♂️" :
-                        workouts[dateStr][0].type === "hockey" ? "🏑" : "🏋️";
-          div.textContent += ` ${emoji}`;
+          const emoji = workouts[dateStr].map(w => {
+            if (w.type === 'run') return '🏃‍♂️';
+            if (w.type === 'bike') return '🚴‍♂️';
+            if (w.type === 'swim') return '🏊‍♂️';
+            if (w.type === 'weights') return '🏋️‍♂️';
+            if (w.type === 'hockey') return '🏑';
+          }).join('');
+          const emojiDiv = document.createElement('div');
+          emojiDiv.className = 'emoji';
+          emojiDiv.textContent = emoji;
+          div.appendChild(emojiDiv);
         }
+
         div.onclick = () => openModal(dateStr);
         calendar.appendChild(div);
       }
+
+      updateSummary(workouts);
     }
 
-    function prevMonth() {
-      currentDate.setMonth(currentDate.getMonth() - 1);
-      renderCalendar();
-    }
-
-    function nextMonth() {
-      currentDate.setMonth(currentDate.getMonth() + 1);
-      renderCalendar();
+    function changeMonth(offset) {
+      currentDate.setMonth(currentDate.getMonth() + offset);
+      updateCalendar();
     }
 
     function openModal(dateStr) {
-      selectedDate = dateStr;
-      document.getElementById("overlay").classList.add("show");
-      document.getElementById("workoutModal").classList.add("show");
+      document.getElementById('workoutModal').style.display = 'flex';
+      document.getElementById('selectedDateDisplay').textContent = dateStr;
+      document.getElementById('distance').value = '';
+      document.getElementById('duration').value = '';
+      document.getElementById('weightsFields').style.display = 'none';
+      document.getElementById('distanceTimeFields').style.display = 'block';
     }
 
     function closeModal() {
-      document.getElementById("overlay").classList.remove("show");
-      document.getElementById("workoutModal").classList.remove("show");
+      document.getElementById('workoutModal').style.display = 'none';
     }
+
+    document.getElementById('workoutType').addEventListener('change', function() {
+      const type = this.value;
+      document.getElementById('weightsFields').style.display = type === 'weights' ? 'block' : 'none';
+      document.getElementById('distanceTimeFields').style.display = type === 'weights' || type === 'hockey' ? 'none' : 'block';
+    });
 
     function saveWorkout() {
-      const type = document.getElementById("type").value;
-      const distance = document.getElementById("distance").value;
-      const duration = document.getElementById("duration").value;
-      const entry = { type, distance, duration };
+      const dateStr = document.getElementById('selectedDateDisplay').textContent;
+      const type = document.getElementById('workoutType').value;
+      const distance = parseFloat(document.getElementById('distance').value) || 0;
+      const duration = parseFloat(document.getElementById('duration').value) || 0;
+      const weightsType = document.getElementById('weightsType').value;
 
-      const workouts = JSON.parse(localStorage.getItem("calendarWorkouts") || "{}");
-      workouts[selectedDate] = [entry];
-      localStorage.setItem("calendarWorkouts", JSON.stringify(workouts));
+      const workouts = getStoredWorkouts();
+      if (!workouts[dateStr]) workouts[dateStr] = [];
 
+      const entry = { type };
+      if (type === 'run' || type === 'bike' || type === 'swim') {
+        entry.distance = distance;
+        entry.duration = duration;
+      } else if (type === 'weights') {
+        entry.weightsType = weightsType;
+      }
+
+      workouts[dateStr].push(entry);
+      saveStoredWorkouts(workouts);
       closeModal();
-      renderCalendar();
+      updateCalendar();
     }
 
-    renderCalendar();
+    function updateSummary(workouts) {
+      const summary = document.getElementById('summary');
+      let swimDist = 0, swimTime = 0, runDist = 0, runTime = 0, bikeDist = 0, bikeTime = 0, weightsCount = 0, hockeyCount = 0;
+      for (const date in workouts) {
+        const dateObj = new Date(date);
+        if (dateObj.getMonth() !== currentDate.getMonth() || dateObj.getFullYear() !== currentDate.getFullYear()) continue;
+        workouts[date].forEach(w => {
+          if (w.type === 'swim') { swimDist += w.distance || 0; swimTime += w.duration || 0; }
+          if (w.type === 'run') { runDist += w.distance || 0; runTime += w.duration || 0; }
+          if (w.type === 'bike') { bikeDist += w.distance || 0; bikeTime += w.duration || 0; }
+          if (w.type === 'weights') weightsCount++;
+          if (w.type === 'hockey') hockeyCount++;
+        });
+      }
+
+      summary.innerHTML = `
+        <h3>Monthly Summary</h3>
+        🏊‍♂️ Swim – ${swimDist.toFixed(1)} km, ${swimTime.toFixed(1)} min<br>
+        🏃‍♂️ Run – ${runDist.toFixed(1)} km, ${runTime.toFixed(1)} min<br>
+        🚴‍♂️ Bike – ${bikeDist.toFixed(1)} km, ${bikeTime.toFixed(1)} min<br>
+        🏋️‍♂️ Weights – ${weightsCount} sessions<br>
+        🏑 Hockey – ${hockeyCount} sessions
+      `;
+    }
+
+    updateCalendar();
   </script>
 </body>
 </html>
